# QuickDrop

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  ws_test.html
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  test_ws.py
backend/app/: main.py
backend/app/api/: route.py  routes.py
backend/app/api/endpoints/: debug.py  devices.py  health.py  preview.py  ws.py
backend/app/models/: __init__.py  device.py  messages.py
backend/app/services/: __init__.py  connection_manager.py
backend/app/websockets/: router.py
backend/app/websockets/endpoints/: ws.py
backend/app/ws/: route.py
frontend/: .dockerignore  Dockerfile  components.json  next.config.mjs  package-lock.json  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/(root)/: layout.tsx  page.tsx
frontend/app/(root)/chat/[targetId]/: page.tsx
frontend/app/(root)/debug/: page.tsx
frontend/app/(root)/health/: page.tsx
frontend/app/chat/[peerId]/: page.tsx
frontend/components/chat/: ChatHeader.tsx  ChatWindow.tsx  DisconnectBanner.tsx  EmptyChat.tsx  FileBubble.tsx  FileProgressBar.tsx  LinkEmbed.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  ReactionBadge.tsx  TypingIndicator.tsx
frontend/components/discovery/: EmptyState.tsx  PeerBubble.tsx  StatusBar.tsx
frontend/components/handshake/: IncomingRequestModal.tsx  RequestingModal.tsx
frontend/components/home/: AnimatedDeviceCard.tsx  ConnectionRequestModal.tsx  DeviceCard.tsx  DeviceInfo.tsx  DeviceList.tsx  EditNameDialog.tsx  Header.tsx  RadarPulse.tsx
frontend/components/ui/: badge.tsx  button.tsx  combobox.tsx  context-menu.tsx  dropdown-menu.tsx  menubar.tsx  select.tsx  spinner.tsx
frontend/context/: WebRTCContext.tsx
frontend/hooks/: useChat.ts  useDeviceName.ts  useDevices.ts  usePeerConnection.ts  useWebRTCBridge.ts  useWebSocket.ts
frontend/lib/: device.ts  utils.ts  websocket.ts
frontend/lib/webrtc/: EventEmitter.ts  FileTransferManager.ts  IndexedDBManager.ts  WebRTCManager.ts  context.ts  peerManager.ts
frontend/types/: chat.ts  messages.ts
src/: main.py
src/functions/: alert_dialog.py  device_info.py  navigation_bar.py  network_manager.py  theme.py
src/pages/: chat_page.py  explore.py  settings.py
