[project]
name = "quickdrop-backend"
version = "0.1.0"
description = "WebSocket signaling and device discovery server for QuickDrop"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
]

[project.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
