[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.42.0",
    "websockets>=16.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.13.3",
]
